Fix kiss positioning on mobile

--- a/WeddingWebsite/wwwroot/css/register.css
+++ b/WeddingWebsite/wwwroot/css/register.css
@@ -614,6 +614,7 @@ body {
 
 /* Kissing animation */
 .kiss-outer {
+    position: relative;
     min-height: 300px;
 }
 
